# quicklendx-protocol

./: .gitattributes  .gitignore  ACCEPT_BID_FEATURE_COMPLETE.md  AGENTS.md  AUDIT.md  BACKUP_RETENTION_IMPLEMENTATION.md  BACKUP_RETENTION_QUICK_START.md  BACKUP_RETENTION_SECURITY.md  BID_RANKING_TEST_SUMMARY.md  CATEGORY_BREAKDOWN_IMPLEMENTATION.md  CI_CD_COMPATIBILITY.md  CLEANUP_EXECUTIVE_SUMMARY.md  COMMIT_SUMMARY.md  COVERAGE_ANALYSIS.md  CURRENCY_WHITELIST_ASSIGNMENT.md  Cargo.toml  DEFAULT_TESTS_IMPLEMENTATION_SUMMARY.md  DISPUTE_IMPLEMENTATION_COMPLETE.md  DISPUTE_QUICK_REFERENCE.md  DUE_DATE_IMPLEMENTATION.md  E2E_LIFECYCLE_PR.md  EMERGENCY_WITHDRAW_TEST_OUTPUT.md  EXPORT_IMPLEMENTATION_COMPLETE.md  EXPORT_IMPLEMENTATION_READY.md  FEATURE_331_SUMMARY.md  FINAL_SUMMARY.md  FINAL_TEST_OUTPUT.md  FUZZ_IMPLEMENTATION_README.md  HARDENED_NOTIFICATIONS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  INVESTOR_KYC_TEST_GUIDE.md  INVOICE_COUNT_TEST_SUMMARY.md  ISSUE_1063_INDEX.md  ISSUE_343_SUMMARY.md  MERGE_RESOLUTION_REPORT.md  PAUSE_BYPASS_IMPLEMENTATION_SUMMARY.md  PR-1198-accept-bid-fuzz.md  (+127 more)
quicklendx-contracts/: .gitignore  .llvm-cov.toml  ACCEPT_BID_IMPLEMENTATION_SUMMARY.md  AUDIT_STATS_TESTING.md  BID_COMPARE_ORDER_PROPS_CHECKLIST.md  BID_COMPARE_ORDER_PROPS_IMPLEMENTATION.md  BID_COMPARE_ORDER_PROPS_REPORT.md  BID_COMPARE_ORDER_PROPS_SUMMARY.md  BUILD_VERIFICATION_ISSUE_339.md  CI_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DISPUTE_RESOLUTION_IMPLEMENTATION.md  EMERGENCY_WITHDRAW_SECURITY_AUDIT.md  EMERGENCY_WITHDRAW_TEST_OUTPUT.md  EMERGENCY_WITHDRAW_TEST_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXPECTED_TEST_OUTPUT.md  EXPIRED_BIDS_TEST_SUMMARY.md  EXPIRED_BID_CLEANUP_IMPLEMENTATION.md  FEE_TESTS_IMPLEMENTATION.md  FEE_TESTS_STATUS.md  FINAL_TEST_OUTPUT.txt  FUZZ_TESTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VALIDATION.md  INVOICE_COUNT_TESTS.md  ISSUE_339_FINAL_SUMMARY.md  ISSUE_339_IMPLEMENTATION.md  ISSUE_339_QUICK_REFERENCE.md  MAX_INVOICES_PER_BUSINESS_TESTS.md  Makefile  PRE_PUSH_CHECKLIST.md  PRE_PUSH_CHECKLIST_FEE_TESTS.md  PROFIT_FEE_TESTS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROTOCOL_LIMITS_README.md  PROTOCOL_LIMITS_SECURITY.md  QUICK_START_BID_TESTS.md  QUICK_TEST_GUIDE.md  (+103 more)
quicklendx-contracts/.cargo/: config.toml  mutants.toml
quicklendx-contracts/docs/: ATTESTATIONS.md  TESTING_FRAMEWORK_IMPLEMENTATION.md  admin-dry-run.md  admin-transfer.md  analytics-snapshot.md  audit-hash-chain.md  bid-lifecycle.md  cleanup-pagination.md  decimal-handling.md  diagnostics.md  error-catalog.md  escrow-invariants.md  freshness.md  gas-baselines.md  insurance-stacking.md  invariant-report.md  investment-lifecycle.md  invoice-search-fuzz.md  invoice-search-ranking.md  mutation-testing.md  notifications-idempotency.md  partial-payment-fuzz.md  protocol-health.md  revenue-distribution-fuzz.md  settlement-dispute-interaction.md  storage-key-stability.md  storage-ttl-policy.md  vesting.md
quicklendx-contracts/fuzz/: Cargo.toml  validate_fuzzer.rs
quicklendx-contracts/proptest-regressions/: distribute_revenue.txt  partial_payment.txt  test_audit_stats_regression.txt  test_fuzz.txt  test_volume_tier_props.txt
quicklendx-contracts/scripts/: check-admin-coverage.sh  check-unsafe.sh  check-wasm-size.sh  gas-baseline.toml  update-gas-baseline.sh  wasm-size-baseline.toml  wasm-size-check-output.txt
quicklendx-contracts/src/: address_summary.rs  admin.rs  analytics.rs  audit.rs  backpressure.rs  backup.rs  backup_v1.rs  bench.rs  bid.rs  contract.rs  currency.rs  defaults.rs  diagnostics.rs  dispute.rs  dispute_timeline.rs  emergency.rs  errors.rs  escrow.rs  events.rs  events_escrow_stub.rs  fees.rs  freshness.rs  governance.rs  health.rs  idempotency.rs  incident.rs  init.rs  integration_tests.rs  invariants.rs  investment.rs  investment_queries.rs  invoice.rs  invoice_search.rs  lib.rs  lib.rs.bak  maintenance.rs  monitor.rs  notifications.rs  operational_limits.rs  pagination.rs  (+207 more)
quicklendx-contracts/tarpaulin-report/: tarpaulin-report.html
quicklendx-contracts/tests/: advisory_enforcement.rs  analytics_accuracy.rs  auth_verification_test.rs  backup_retention_validation.rs  gas_regression.rs  invoice_id_collision_regression.rs  invoice_lifecycle_e2e.rs  profit_fee_golden.rs  test_admin_lookalike.rs  (+3 more)
(+4258 files in other folders)
