[workspace]
members = ["contracts/credence_delegation"]

[package]
name = "quicklendx-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[features]
# Enable property-based fuzz tests (disabled by default to keep CI fast)
fuzz-tests = []

[lints.rust]
# Deny warnings by default to catch them in CI, while respecting #![allow] directives in code
warnings = "deny"