[package]
name = "quicklendx-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=20.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "=20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr.git", tag = "v20.0.0" }


