[package]
name = "quicklendx-contracts"
version = "0.1.0"
edition = "2021"

[lib]
# rlib only: avoids Windows GNU "export ordinal too large" when building cdylib.
# For WASM contract build use: cargo build --release --target wasm32-unknown-unknown
# (add crate-type = ["cdylib"] temporarily or build in WSL/Linux if you need the .so artifact).
crate-type = ["lib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1.4"

[features]
# Enable fuzz tests (disabled by default to avoid blocking CI)
fuzz-tests = []

# Optimized for minimal WASM size and network deployment limits (see README size budget).
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
