[package]
name = "quicklendx-contracts"
version = "0.1.0"
edition = "2021"

[lib]
# rlib for tests/integration; cdylib for WASM contract builds.
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "25.1.1", features = ["alloc"] }
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
soroban-sdk = { version = "25.1.1", features = ["testutils"] }
quicklendx-contracts = { path = ".", features = ["testutils"] }


[features]
# Enable fuzz tests (disabled by default to avoid blocking CI)
fuzz-tests = ["dep:proptest"]
# Allow selectively compiling legacy test modules (kept off in CI)
legacy-tests = []
# Feature-gated logging and structured diagnostics
diagnostics = []
testutils = ["soroban-sdk/testutils"]
